# pkg/controllers/roomtype.go
@@ -22,7 +22,8 @@ func (a API) GetAllRoomType(ctx echo.Context, params routers.GetAllRoomTypeParam
 	}
 
 	if err := a.DB.Limit(limit).Offset(offSet).Find(&roomType).Error; err != nil {
-		return err
+		a.Log.WithError(err).Errorf("failed to get room type: %s", err)
+		return sendError(ctx, http.StatusBadRequest, "failed to get room type")
 	}
 
 	return ctx.JSON(http.StatusOK, roomType)
@@ -32,26 +33,33 @@ func (a API) CreateRoomType(ctx echo.Context, params routers.CreateRoomTypeParam
 	var roomType routers.RoomType
 
 	if err := ctx.Bind(&roomType); err != nil {
-		return err
+		a.Log.WithError(err).Errorf("failed to bind room type: %s", err)
+		return sendError(ctx, http.StatusBadRequest, "invalid input data")
 	}
 	if err := a.DB.Create(&roomType).Error; err != nil {
-		return err
+		a.Log.WithError(err).Errorf("failed to create room type: %s", err)
+		return sendError(ctx, http.StatusBadRequest, "failed to create room type")
 	}
+
+	a.Log.Infof("room type created with id: %s", roomType.Id)
 	return ctx.JSON(http.StatusCreated, roomType.Id)
 }
 
 func (a API) DeleteRoomTypeById(ctx echo.Context, roomTypeId string) error {
 	var roomType routers.RoomType
 	if err := a.DB.Where("id = ?", roomTypeId).Delete(&roomType).Error; err != nil {
-		return err
+		a.Log.WithError(err).Errorf("failed to delete room type: %s", err)
+		return sendError(ctx, http.StatusBadRequest, "failed to delete room type")
 	}
+
+	a.Log.Infof("room type deleted with id: %s", roomType.Id)
 	return ctx.NoContent(http.StatusNoContent)
 }
 
 func (a API) GetRoomTypeById(ctx echo.Context, roomTypeId string) error {
 	rt, err := a.getRoomTypeById(roomTypeId)
 	if err != nil {
-		return err
+		return sendError(ctx, http.StatusNotFound, "room type not found")
 	}
 
 	return ctx.JSON(http.StatusOK, rt)
@@ -60,12 +68,12 @@ func (a API) GetRoomTypeById(ctx echo.Context, roomTypeId string) error {
 func (a API) UpdateRoomTypeById(ctx echo.Context, roomTypeId string) error {
 	var requestRT routers.RoomType
 	if err := ctx.Bind(&requestRT); err != nil {
-		return err
+		a.Log.WithError(err).Errorf("failed to bind room type: %s", err)
+		return sendError(ctx, http.StatusBadRequest, "invalid input data")
 	}
 	rt, err := a.getRoomTypeById(roomTypeId)
 	if err != nil {
-		a.Log.WithError(err).Errorf("failed to get booking by id: %s", roomTypeId)
-		return err
+		return sendError(ctx, http.StatusNotFound, "room type not found")
 	}
 	if requestRT.Name != "" {
 		rt.Name = requestRT.Name
@@ -76,24 +84,15 @@ func (a API) UpdateRoomTypeById(ctx echo.Context, roomTypeId string) error {
 	if requestRT.Price != 0 {
 		rt.Price = requestRT.Price
 	}
-	if requestRT.Photo != nil {
-		rt.Photo = requestRT.Photo
+	if requestRT.ImageUrls != nil {
+		rt.ImageUrls = requestRT.ImageUrls
 	}
 
 	if err := a.DB.Save(&rt).Error; err != nil {
-		return err
+		a.Log.WithError(err).Errorf("failed to update room type: %s", err)
+		return sendError(ctx, http.StatusBadRequest, "failed to update room type")
 	}
 
+	a.Log.Infof("room type updated with id: %s", rt.Id)
 	return ctx.JSON(http.StatusOK, rt.Id)
-}
-
-func (a API) getRoomTypeById(rtId interface{}) (routers.RoomType, error) {
-	var rt routers.RoomType
-
-	if err := a.DB.Where("id = ?", rtId).First(&rt).Error; err != nil {
-		a.Log.WithError(err).Errorf("failed to get room type by id: %s", rtId)
-		return routers.RoomType{}, err
-	}
-
-	return rt, nil
 }
